plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'inha'
version = '1.2.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'junit:junit:4.13.1'
    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	//jwt
	implementation("io.jsonwebtoken:jjwt-api:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	//s3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	implementation 'org.json:json:20210307'

	// Apache Commons FileUpload
	implementation 'commons-fileupload:commons-fileupload:1.4'

	// Apache Commons IO
	implementation 'commons-io:commons-io:2.8.0'

	implementation 'com.corundumstudio.socketio:netty-socketio:2.0.9'

	// P6Spy
	//implementation 'p6spy:p6spy:3.9.1'
	//implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'

	// mapstruct
	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
	annotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
	testAnnotationProcessor("org.mapstruct:mapstruct-processor:1.5.3.Final")
	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
	implementation("org.mapstruct:mapstruct:1.5.3.Final")
	// https://mvnrepository.com/artifact/org.projectlombok/lombok-mapstruct-binding
	implementation("org.projectlombok:lombok-mapstruct-binding:0.2.0")

	// Querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// github api
	implementation 'org.kohsuke:github-api:1.301'
	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'

	// spring boot actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'


	// jackson
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

	// https://mvnrepository.com/artifact/org.apache.poi/poi
	implementation group: 'org.apache.poi', name: 'poi', version: '4.1.2'
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
	// https://mvnrepository.com/artifact/org.apache.tika/tika-core
	implementation group: 'org.apache.tika', name: 'tika-core', version: '2.3.0'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}

javadoc {
	options {
		encoding = 'UTF-8'
		charSet = 'UTF-8'
		author = true
		version = true
		links = ['https://docs.oracle.com/en/java/javase/17/docs/api/']
		title = "I-OSS Server API Documentation"
		addStringOption('Xdoclint:none', '-quiet')
		addBooleanOption('html5', true)
	}
	// 소스 파일 인코딩 설정
	options.encoding = 'UTF-8'
}

tasks.register('copyDoc', Copy) {
	dependsOn 'javadoc'
	from "$buildDir/docs/javadoc"
	into "$projectDir/docs"
}